--- a/Cart/package.json
+++ b/Cart/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/colson0x1/amazon-prime#readme",
   "dependencies": {
-    "faker": "5.1.0",
+    "faker": "^5.0.0",
     "html-webpack-plugin": "5.5.0",
     "webpack": "5.88.0",
     "webpack-cli": "4.10.0",
